// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/mentions/demo/async.md correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    rows="1"
  />
</div>
`;

exports[`renders ./components/mentions/demo/basic.md correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    rows="1"
  >
    @afc163
  </textarea>
</div>
`;

exports[`renders ./components/mentions/demo/form.md correctly 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="coders"
        title="Top coders"
      >
        Top coders
      </label>
    </div>
    <div
      class="ant-col ant-col-16 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-mentions"
        >
          <textarea
            id="coders"
            rows="1"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class="ant-form-item-required"
        for="bio"
        title="Bio"
      >
        Bio
      </label>
    </div>
    <div
      class="ant-col ant-col-16 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-mentions"
        >
          <textarea
            id="bio"
            placeholder="You can use @ to ref user here"
            rows="3"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-14 ant-col-offset-6 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
           
        <button
          class="ant-btn"
          type="button"
        >
          <span>
            Reset
          </span>
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/mentions/demo/placement.md correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    rows="1"
  />
</div>
`;

exports[`renders ./components/mentions/demo/prefix.md correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    placeholder="input @ to mention people, # to mention tag"
    rows="1"
  />
</div>
`;

exports[`renders ./components/mentions/demo/readonly.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:10px"
  >
    <div
      class="ant-mentions ant-mentions-disabled"
      style="width:100%"
    >
      <textarea
        disabled=""
        placeholder="this is disabled Mentions"
        rows="1"
      />
    </div>
  </div>
  <div
    class="ant-mentions"
    style="width:100%"
  >
    <textarea
      placeholder="this is readOnly Mentions"
      readonly=""
      rows="1"
    />
  </div>
</div>
`;
